Se agrego el servicio post a la aplicacion

--- a/src/app/entries/entry/entry.component.html
+++ b/src/app/entries/entry/entry.component.html
@@ -14,6 +14,6 @@
             {{comment.comment}}
         </p>
     </div>
-    <app-entry-comment-form (onCommentAdded)="onCommentAdded($event)"></app-entry-comment-form>
+    <app-entry-comment-form (onCommentAdded)="onCommentAdded($event)" [entryId]="entry.id"></app-entry-comment-form>
 </div>   
 
